--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,11 +1,6 @@
 name: Test
 
-  push:
-    branches: 
-      - master
-  pull_request:
-    branches: 
-      - master
+on: [push, pull_request]
 
 jobs:
   test:
