--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -10,9 +10,20 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
-      - name: Set env
+
+      - name: Set GitHub tag in env
         run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
-      - name: Test
+
+      - name: Build docker image
+        run: ./app.sh build $RELEASE_VERSION
+
+      - name: Test docker image
+        run: ./app.sh test $RELEASE_VERSION
+
+      - name: Push docker image
+      	env:
+          DOCKER_USERNAME: ${{secrets.DOCKER_USERNAME}}
+          DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
         run: |
-          echo $RELEASE_VERSION
-          echo ${{ env.RELEASE_VERSION }}
+          docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
+          ./app.sh test $RELEASE_VERSION
