--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -6,7 +6,7 @@ on:
       - 'v*.*.*'
 
 jobs:
-  test:
+  release:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
@@ -23,4 +23,4 @@ jobs:
       - name: Push docker image
         run: |
           docker login -u=${{secrets.DOCKER_USERNAME}} -p=${{secrets.DOCKER_PASSWORD}}
-          ./app.sh test $RELEASE_VERSION
+          ./app.sh push $RELEASE_VERSION
