--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,7 +3,7 @@ name: Build and Test
 on: [push, pull_request]
 
 jobs:
-  test:
+  test_and_build:
     # The type of runner that the job will run on
     runs-on: ubuntu-20.04
 
