--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -22,5 +22,6 @@ jobs:
 
       - name: Push docker image
         run: |
-          docker login -u=${{secrets.DOCKER_USERNAME}} -p=${{secrets.DOCKER_PASSWORD}}
-          ./app.sh push $RELEASE_VERSION
+          echo "push the image"
+          #docker login -u=${{secrets.DOCKER_USERNAME}} -p=${{secrets.DOCKER_PASSWORD}}
+          #./app.sh push $RELEASE_VERSION
