--- a/test-pipelines.yml
+++ b/test-pipelines.yml
@@ -16,8 +16,8 @@ jobs:
   pool:
     vmImage: ubuntu-20.04
   steps:
-  - script: ./app.sh build ${app_version}
+  - script: ./app.sh build ${{ variables.app_version }}
     displayName: 'Build docker image'
 
-  - script: ./app.sh test ${app_version}
+  - script: ./app.sh test ${{ variables.app_version }}
     displayName: 'Test docker image'
