--- a/test-pipelines.yml
+++ b/test-pipelines.yml
@@ -21,3 +21,6 @@ jobs:
 
   - script: ./app.sh test ${{ variables.app_version }}
     displayName: 'Test docker image'
+
+  - script: echo ${{ variables.myvar1 }} && echo ${{ variables.secretvar1 }}
+    displayName: 'Print variables'
